--- a/down.html
+++ b/down.html
@@ -4,7 +4,7 @@
   <head lang="en">
     <meta charset="UTF-8">
     <title>WorldWind Example</title>
-    <link href="upStyle.css" rel="stylesheet">
+    <link href="downStyle.css" rel="stylesheet">
     <!-- Include the Web WorldWind library. -->
     <script src="https://files.worldwind.arc.nasa.gov/artifactory/web/0.9.0/worldwind.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
