--- a/down.html
+++ b/down.html
@@ -217,7 +217,7 @@
                       // neighboring sattelite ID's and plot them.
                       // Every neighboring sattelite is appended with a parameter id + <number of sattelites added so far>.
                       // To change it back to before just replace the for loop with "id=AoveId[s]"
-                      myURL = "wwdPage.html?num=" + encodeURIComponent(aboveID.length - 1) + "&id=" + encodeURIComponent(aboveID[s]);
+                      myURL = "up.html?num=" + encodeURIComponent(aboveID.length - 1) + "&id=" + encodeURIComponent(aboveID[s]);
                       var count=0;
                       for (var k=0; k<aboveID.length; k++) {
                         //append all neighboring satelites
