--- a/gyro.html
+++ b/gyro.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="gyroStyle.css" rel="stylesheet">
         <script src=https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.3.0/math.min.js></script>        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>Locate sat</title>
     </head>
     <body>
         
-
-        <h1 class="d"></h1>
-        <p class="observation-info"></p>
-        <pre class="orientation_sensors"></pre>
-        <h1 class="found-banner"></h1>
-
+	<div id="content-div">
+            <h1 class="d"></h1>
+            <p class="observation-info"></p>
+            <pre class="orientation_sensors"></pre>
+            <h1 class="found-banner"></h1>
+	</div>
         <script src="https://rawgit.com/adtile/Full-Tilt/master/dist/fulltilt.min.js" type="text/javascript"></script>
 
         <script src="gyro.js" type="text/javascript"></script>
